Updated index.html layout for responsive testimonial section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<p class="textbold">Programmes Offered <br/> <span class="textorange">Pre-KG to Grade 12</span></p>
 			<img class="Cambridgelogo m-3" src="./images/cambridgelogo.png" alt="nest logo"/>
 	    	<!-- <a class="navbar-brand" href="index.html">The Nest School</a> -->
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+				<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation"> -->
+	        <!-- <span class="oi oi-menu"></span> Menu -->
 	      <!-- </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
