Updated index.html layout for responsive testimonial section

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 						<div class="row mt-5">
 							<h2 class="mb-4 text-warning col-12 text-center"><span class="txtclr">Early Year Program </span>@ The NEST School</h2>
 							<div class="col-lg-12 p-3">
-								<div class="services-2 bgtransition bgtrans1 d-flex">
-									<div class="icon iconclr1 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-security"></span></div>
-									<div class="text d-flex flex-column">
-										<h3 class="icontxt1 fs-3">Child-centred</h3>
+								<div class="services-2 bgtransition bgtrans1 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr1 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-security"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt1 fs-3 text-center text-md-start">Child-centred</h3>
 										<p>Our Early Year program is based on the belief that children learn best when they are allowed to explore and learn at their own pace.
 											 We have a carefully curated curriculum which involves the best practices across the Montessori, Waldorf and the Reggio Emilia methods of 
 											 teaching-learning incorporated with the IB PYP Program.</p>
@@ -244,20 +244,20 @@
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans2 d-flex">
-									<div class="icon iconclr2 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
-									<div class="text ">
-										<h3 class="icontxt2 fs-3">Inquiry based learning</h3>
+								<div class="services-2 bgtransition bgtrans2 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr2 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
+									<div class="textd-flex flex-column  w-100 ">
+										<h3 class="icontxt2 fs-3 text-center text-md-start">Inquiry based learning</h3>
 										<p>Our IB PYP curriculum is designed to help the child see the world through various themes and allows an inquiry based learning. 
 											These make them confident lifelong self learners that can cope up with challenges in the real world.</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans3 d-flex">
-									<div class="icon iconclr3 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
-									<div class="text">
-										<h3 class="icontxt3 fs-3">Hands-on learning</h3>
+								<div class="services-2 bgtransition bgtrans3 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr3 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt3 fs-3 text-center text-md-start">Hands-on learning</h3>
 										<p>Our classrooms are filled with hands-on materials adopted from the Montessori method that children can use to learn about the world around them. 
 											The 100 languages from the Reggio Emilia approach are brought alive through the various models of learning adopted in the classroom. Our vivid classroom 
 											displays celebrate and nurture each child’s talent and capabilities. Role plays, visual art, movement and music are rolled into the lessons using the Waldorf method to make learning more fun and meaningful.  A key part of our curriculum focuses on teaching children basic life skills.</p>
@@ -265,10 +265,10 @@
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans4 d-flex">
-									<div class="icon iconclr4 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
-									<div class="text">
-										<h3 class="icontxt4 fs-3">Emphasis on independence and life skills</h3>
+								<div class="services-2 bgtransition bgtrans4 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr4 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt4 fs-3 text-center text-md-start">Emphasis on independence and life skills</h3>
 										<p>A perfect amalgamation of leading methods of learning in the early years including Montessori, Waldorf, Reggio Emilia
 											 blended with the IB PYP curriculum make our school one of the best IB schools in Chennai. Our program encourages children to be
 											  independent and to take responsibility for their own learning.</p>
@@ -277,30 +277,30 @@
 							</div>
 							<h2 class="mb-4 text-center text-warning col-12"><span class="txtclr">IB PYP </span> Curriculum</h2>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans5 d-flex">
-									<div class="icon iconclr5 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
-									<div class="text">
-										<h3 class="icontxt5 fs-3">Internationally recognized and accredited</h3>
+								<div class="services-2 bgtransition bgtrans5 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr5 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt5 fs-3 text-center text-md-start">Internationally recognized and accredited</h3>
 										<p>The IB Curriculum is recognized by universities around the world, and graduates of IB programs are often well-prepared
 											 for success in higher education.</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans6 d-flex">
-									<div class="icon iconclr6 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-kids"></span></div>
-									<div class="text">
-										<h3 class="icontxt6 fs-3">Rigorous and challenging</h3>
+								<div class="services-2 bgtransition bgtrans6 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr6 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-kids"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt6 fs-3 text-center text-md-start">Rigorous and challenging</h3>
 										<p>The IB curriculum is designed to be academically challenging, and students who complete the program will have developed 
 											strong critical thinking, research, and writing skills.</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans7 d-flex">
-									<div class="icon iconclr7 iconclr mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-security"></span></div>
-									<div class="text">
-										<h3 class="icontxt7 fs-3">Inquiry based transdisciplinary learning</h3>
+								<div class="services-2 bgtransition bgtrans7 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr7 iconclr mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-security"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt7 fs-3 text-center text-md-start">Inquiry based transdisciplinary learning</h3>
 										<p>The IB PYP curriculum framework has been used to curate the unique Primary years curriculum at The NEST School 
 											where learners learn through inquiry revolving around 6 themes. The IB curriculum emphasises transdisciplinary learning,
 											 which means that students will learn to connect ideas from different subjects.</p>
@@ -308,10 +308,10 @@
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans8 d-flex">
-									<div class="icon iconclr8 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
-									<div class="text">
-										<h3 class="icontxt8 fs-3">Holistic</h3>
+								<div class="services-2 bgtransition bgtrans8 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr8 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt8 fs-3 text-center text-md-start">Holistic</h3>
 										<p>The IB program is not just about academics; it also focuses on developing students’ personal and social skills. 
 											Learners are exposed to a variety of subjects including Art, Movement, Yoga, Dance  etc. to ensure a hierarchy
 											 free learning environment.</p>
@@ -320,29 +320,29 @@
 							</div>
 							<h2 class="mb-4 text-center text-warning col-12"><span class="txtclr">IGCSE </span> Curriculum</h2>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans1 d-flex">
-									<div class="icon iconclr1 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
-									<div class="text">
-										<h3 class="icontxt1 fs-3">Internationally recognized</h3>
+								<div class="services-2 bgtransition bgtrans1 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr1 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt1 fs-3 text-center text-md-start">Internationally recognized</h3>
 										<p>The IGCSE exams are recognized by universities around the world, and students who complete IGCSE courses 
 											are often well-prepared for higher education</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans2 d-flex">
-									<div class="icon iconclr2 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
-									<div class="text">
-										<h3 class="icontxt2 fs-3">Flexible and customizable</h3>
+								<div class="services-2 bgtransition bgtrans2 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr2 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt2 fs-3 text-center text-md-start">Flexible and customizable</h3>
 										<p>Schools can choose which IGCSE courses to offer, which means that students can tailor their education to their talents, interests and needs.</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans3 d-flex">
-									<div class="icon iconclr3 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-kids"></span></div>
-									<div class="text">
-										<h3 class="icontxt3 fs-3">Broad range of subjects</h3>
+								<div class="services-2 bgtransition bgtrans3 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr3 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-kids"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt3 fs-3 text-center text-md-start">Broad range of subjects</h3>
 										<p>IGCSE courses are available in a wide range of subjects,
 											 from traditional academic subjects to more vocational subjects. In addition a variety of
 											  electives are offered to ensure that learners are able to acquire different skills to make them confident lifelong learners</p>
@@ -350,10 +350,10 @@
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans4 d-flex">
-									<div class="icon iconclr4 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
-									<div class="text">
-										<h3 class="icontxt4 fs-3">Hierarchy free learning</h3>
+								<div class="services-2 bgtransition bgtrans4 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr4 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt4 fs-3 text-center text-md-start">Hierarchy free learning</h3>
 										<p>At The NEST School we aim to expose learners to a wide range of co curricular activities including Visual 
 											and Performing Arts, Sports, Music, Yoga etc to ensure that there is a hierarchy free learning approach breaking
 											 the traditional settings with only focus on STEM subjects. This makes The NEST School a unique and one of the top rated Cambridge IGCSE schools in the city,</p>
@@ -361,10 +361,10 @@
 								</div>
 							</div>
 							<div class="col-lg-12">
-								<div class="services-2 bgtransition bgtrans5 d-flex">
-									<div class="icon iconclr5 mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
-									<div class="text">
-										<h3 class="icontxt5 fs-3">Emphasis on practical skills</h3>
+								<div class="services-2 bgtransition bgtrans5 d-flex flex-column flex-md-row align-items-center align-items-md-start">
+									<div class="icon iconclr5 mt-2 mr-md-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
+									<div class="text d-flex flex-column  w-100">
+										<h3 class="icontxt5 fs-3 text-center text-md-start">Emphasis on practical skills</h3>
 										<p>IGCSE courses often emphasise practical skills, such as problem-solving and communication. 
 											Learners become confident about their strengths to be able to solve challenging problems through innovative and creative approaches.</p>
 									</div>
