--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel">
-      <div class="slider-item py-5" style="background-image:url(images/view4.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
+    <!-- <section class="home-slider owl-carousel">
+      <div class="slider-item py-5" style="background-image:url(images/view4.jpg);"> -->
+      	<!-- <div class="overlay"></div> -->
+        <!-- <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center flex-wrap" data-scrollax-parent="true">
            <div class="col-lg-6 text-center text-white mb-4 mb-lg-0">
               <h1 class="mb-4">IB PYP and Cambridge Affiliated School in Chennai <span>Pre-KG to Grade 9 Admissions Open</span></h1>
-            </div>
+            </div> -->
 
             <!-- Form Section -->
-            <div class="col-md-8 col-lg-5 bg-light p-2 p-md-4 p-lg-5 rounded m-3" id="enquiryform">
+            <!-- <div class="col-md-8 col-lg-5 bg-light p-2 p-md-4 p-lg-5 rounded m-3" id="enquiryform">
               <form>
                 <div class="form-row">
                   <div class="form-group col-md-6">
@@ -121,10 +121,10 @@
 				</div>
                 <button type="submit" class="btn btn-primary w-100">Submit</button>
               </form>
-            </div>
+            </div> -->
+        <!-- </div>
         </div>
-        </div>
-      </div>
+      </div> -->
 
       <!-- <div class="slider-item" style="background-image:url(images/banner2.jpg);">
       	<div class="overlay"></div>
@@ -137,7 +137,55 @@
         </div>
         </div>
       </div>  -->
-    </section>
+    <!-- </section> -->
+	<section>
+		<div class="container-fluid styleheaderbg">
+			<div class="row align-items-center justify-content-center">
+				<div class="col-lg-6 text-center text-white mb-4 mb-lg-0">
+					<h1 class="mb-4 text-white fw-bold">IB PYP and Cambridge Affiliated School in Chennai <span>Pre-KG to Grade 9 Admissions Open</span></h1>
+				</div>
+				<div class="col-md-8 col-lg-5" id="enquiryform">
+				<form class="bg-light p-2 p-md-4 p-lg-5 rounded m-3">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <label for="phone">Phone Number</label>
+                  <input type="tel" class="form-control" id="phone" placeholder="Phone Number">
+                </div>
+				<div class="form-group">
+				<label for="grade">Grade</label>
+				<select class="form-control" id="grade">
+					<option disabled selected>Select Grade</option>
+					<option>Toddler Programme</option>
+					<option>Mom & Me Programme</option>
+					<option>Pre-Kindergarten</option>
+					<option>Lower Kindergarten</option>
+					<option>Upper Kindergarten</option>
+					<option>Grade 1–5</option>
+					<option>Grade 6–9</option>
+					<option>Grade 11</option>
+				</select>
+				</div>
+				<div class="row align-items-center justify-content-center">
+                <button type="submit" class="btn btn-primary w-50">Submit</button>
+				</div>
+              </form>
+				</div>
+			</div>
+		</div>
+	</section>
 
     <section class="ftco-services ftco-no-pb d-none d-lg-block">
 			<div class="container-wrap">
