--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 		    </div>
 		  </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	    <div class="container d-flex align-items-center justify-content-center justify-content-lg-between">
 			<img class="nestlogo m-3" src="./images/nestlogo.png" alt="nest logo"/>
 			<img class="iblogo m-3" src="./images/iblogo.png" alt="nest logo"/>
 			<p class="textbold">Programmes Offered <br/> <span class="textorange">Pre-KG to Grade 12</span></p>
-			<img class="Cambridgelogo m-3" src="./images/cambridgelogo.png" alt="nest logo"/>
+			<img class="Cambridgelogo m-3" src="./images/cambridgelogo.png" alt="nest logo"/> -->
 	    	<!-- <a class="navbar-brand" href="index.html">The Nest School</a> -->
 				<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation"> -->
 	        <!-- <span class="oi oi-menu"></span> Menu -->
@@ -71,8 +71,8 @@
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div> -->
-	    </div>
-	  </nav>
+	    <!-- </div>
+	  </nav> -->
     <!-- END nav -->
     
     <!-- <section class="home-slider owl-carousel">
@@ -138,6 +138,14 @@
         </div>
       </div>  -->
     <!-- </section> -->
+	 <nav>
+		<div class="container d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-lg-between">
+			<img class="nestlogo m-3" src="./images/nestlogo.png" alt="nest logo"/>
+			<img class="iblogo m-3" src="./images/iblogo.png" alt="nest logo"/>
+			<p class="textbold">Programmes Offered <br/> <span class="textorange">Pre-KG to Grade 12</span></p>
+			<img class="Cambridgelogo m-3" src="./images/cambridgelogo.png" alt="nest logo"/>
+		</div>
+	 </nav>
 	<section>
 		<div class="container-fluid styleheaderbg">
 			<div class="row align-items-center justify-content-center">
